force-app/main/default/objects/Solicitud_de_revision__mdt/Solicitud_de_revision__mdt.object-meta.xml
<CustomObject>
    <description>Metadato relacionado con la acción &apos;Solicitud de revisión</description>
    <label>Solicitud de revision</label>
    <pluralLabel>Solicitudes de revision</pluralLabel>
</CustomObject>