force-app/main/default/objects/Solicitud_de_revision__mdt/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <description>Asunto de la tarea</description>
    <label>Asunto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>