force-app/main/default/objects/Solicitud_de_revision__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción de la tarea</description>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>