force-app/main/default/objects/Solicitud_de_revision__mdt/fields/Persona_asignada__c.field-meta.xml
<CustomField>
    <fullName>Persona_asignada__c</fullName>
    <description>ID de Salesforce de la persona asignada a la tarea</description>
    <label>Persona asignada</label>
    <length>100</length>
    <type>Text</type>
</CustomField>