force-app/main/default/objects/Solicitud_de_revision__mdt/fields/Tipo_de_la_tarea__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_la_tarea__c</fullName>
    <label>Tipo de la tarea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Otros</fullName>
                <default>true</default>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>