force-app/main/default/objects/Solicitud_de_revision__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Descripcion__c</columns>
    <columns>Persona_asignada__c</columns>
    <columns>Tipo_de_la_tarea__c</columns>
    <columns>Asunto__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>